fixed spacing of buttons

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -62,6 +62,12 @@
 
     }
 
+    #course_container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto auto auto;
+    }
+
    #web_and_computer_programming_certificate {
     grid-column: span 2;
    }
