--- a/styles/small.css
+++ b/styles/small.css
@@ -168,6 +168,10 @@ main picture img {
     width: 100%;
 }
 
+hr {
+    margin: 10px;
+}
+
 section {
     margin: 0 auto;
     width: 100%;
@@ -205,7 +209,7 @@ section img {
     list-style: none;
     color: #fff;
     gap: 10px;
-    margin: 10px auto;
+    margin: 10px auto 20px auto;
     width: calc(100% - 20px);
     max-width: 500px;
 }
